--- a/prototipos/editaRecinto.html
+++ b/prototipos/editaRecinto.html
@@ -76,33 +76,47 @@
         </header>
         <main>
             <div class="container">
-                <h1 class="mt-5">Nombre del recinto</h1>
+                <h1 class="mt-5">Edita Recinto</h1>
                 <div class="d-flex justify-content-end">
                     <bottom class="btn btn-outline-secondary mt-5">
-                        <i class="bi bi-arrow-bar-left" style="font-size: 1em;"></i>
-                        Volver</bottom>
+                        <i class="bi bi-arrow-bar-left" style="font-size: 1em"></i>
+                        Volver</bottom
+                    >
                 </div>
-                
+
                 <div class="row mt-2">
-                    <div class="col-12 col-md-4 mb-3">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM6NVcjixrj9jzHfub5ORbj4ssnu0mgpD8pw&usqp=CAU" alt="" class="img-fluid mt-3">
+                    <div class="col-12 col-md-4 pt-2 mb-3">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM6NVcjixrj9jzHfub5ORbj4ssnu0mgpD8pw&usqp=CAU" alt="" class="img-fluid" />
+                        <label class="form-label mt-3" for="img"><strong>URL imágen: </strong></label>
+                        <input type="text" value="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM6NVcjixrj9jzHfub5ORbj4ssnu0mgpD8pw&usqp=CAU" class="form-control mt-1">
                     </div>
                     <div class="col-12 col-md-8">
-                        <p>
-                            <p><strong>Nombre: </strong><span id="nombre">Pabellón Pepe</span></p>
-                            <p><strong>Propietario: </strong><span id="nombre">Pepe García</span></p>
-                            <p><strong>Capacidad: </strong><span id="nombre">3.000 personas</span></p>
-                            <p><strong>Ubicación: </strong><span id="nombre">Calle Pepito Grillo 12, Badalona</span></p>
-                            <p><strong>Deporte recomendado: </strong><span id="nombre">Deportes de contacto / Básquet</span></p>
-                            <p><strong>Descripción: </strong><span id="nombre">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam modi dicta iste debitis recusandae perspiciatis quae. Eius impedit saepe autem velit voluptate, odio sequi expedita nisi est molestiae quo quisquam!</span></p>
-                        </p>
+                        <form action="" class="form">
+                            <label class="form-label" for="nombre"><strong>Nombre: </strong></label>
+                            <input id="nombre" type="text" value="Nombre Autor" class="form-control" />
+                            <label class="form-label mt-2" for="propietario"><strong>Propietario: </strong></label>
+                            <select id="propietario" class="form-control">
+                                <option value="pepe">Pepe García</option>
+                                <option value="carlos">Carlos Arrebola</option>
+                            </select>
+                            <label class="form-label mt-2" for="cap"><strong>Capacidad: </strong></label>
+                            <input id="cap" type="text" class="form-control" value="3.000"/>
+                            <label class="form-label mt-2" for="ubi"><strong>Ubicación: </strong></label>
+                            <input id="ubi" type="text" class="form-control" value="Calle Pepito Grillo 12, Badalona" />
+                            <label class="form-label mt-2" for="dep"
+                                ><strong>Deportes: </strong></label
+                            >
+                            <input id="dep" type="text" class="form-control" value="Deportes de contacto, Baloncesto" />
+                            <label class="form-label mt-2" for="descripcion"
+                            ><strong>Descripción: </strong></label
+                            >
+                            <textarea id="descripcion" class="form-control" rows="4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, sunt? Recusandae labore at voluptatem tempore incidunt distinctio eaque? Est aspernatur laudantium itaque ullam numquam autem dolor quia amet eum consectetur.</textarea>
+                            <input type="submit" class="btn btn-success mt-3" value="Publicar">
+                            <input type="submit" class="btn btn-success mt-3" value="Actualizar">
+                            <input type="submit" class="btn btn-warning mt-3" value="Cancelar">
+                            <input type="submit" class="btn btn-danger mt-3" value="Eliminar">
+                        </form>
                     </div>
-                </div>
-                <div
-                    class="container fixed-bottom d-flex justify-content-end"
-                    style="padding: 0px 0px 100px 0px"
-                >
-                    <a class="btn btn-success fs-5 shadow">Reservar</a>
                 </div>
                 
             </div>
